Navigation, basic Home page and block list

--- a/frontend/src/assets/sass/app.scss
+++ b/frontend/src/assets/sass/app.scss
@@ -5,4 +5,7 @@
 @import 'base/typography';
 
 @import 'layouts/footer';
+@import 'layouts/layout';
 @import 'layouts/navigation';
+
+@import 'pages/home';
