--- a/frontend/src/assets/sass/base/_base.scss
+++ b/frontend/src/assets/sass/base/_base.scss
@@ -31,6 +31,12 @@ body {
 }
 
 a {
+    font-weight: 500;
     text-decoration: none;
-    color: inherit;
+    color: #0c6cf2;
+
+    &:hover {
+        text-decoration: underline;
+        color: darken(#0c6cf2, 10%);
+    }
 }
