--- a/frontend/src/assets/sass/app.scss
+++ b/frontend/src/assets/sass/app.scss
@@ -4,6 +4,8 @@
 @import 'base/base';
 @import 'base/typography';
 
+@import 'components/create-transaction';
+
 @import 'layouts/footer';
 @import 'layouts/layout';
 @import 'layouts/navigation';
