Block page, transaction item

--- a/frontend/src/assets/sass/app.scss
+++ b/frontend/src/assets/sass/app.scss
@@ -5,6 +5,7 @@
 @import 'base/typography';
 
 @import 'components/create-transaction';
+@import 'components/transaction-item';
 
 @import 'layouts/footer';
 @import 'layouts/layout';
