--- a/frontend/src/assets/sass/components/_transaction-item.scss
+++ b/frontend/src/assets/sass/components/_transaction-item.scss
@@ -1,8 +1,8 @@
 .transaction-item {
     margin: 1.6rem 0;
-    font-size: 1.6rem;
 
     &-hash {
+        font-size: 1.6rem;
         color: #677185;
     }
 
@@ -12,13 +12,16 @@
 
     &-container {
         display: flex;
-        justify-content: space-between;
         align-items: center;
+        flex-wrap: wrap;
+        font-size: 1.6rem;
 
         & > div {
-            flex: 1;
-            flex-basis: 33.33333%;
             width: 33.33333%;
+
+            @include respond(tablet) {
+                width: 100%;
+            }
         }
     }
 
@@ -26,5 +29,12 @@
         height: 2.4rem;
         width: 2.4rem;
         color: #339f7b;
+    }
+
+    &-status {
+        padding: 0.5rem 1rem;
+        font-weight: 700;
+        text-transform: uppercase;
+        border-radius: 0.25rem;
     }
 }
