Address and Home page...

--- a/frontend/src/assets/sass/components/_button.scss
+++ b/frontend/src/assets/sass/components/_button.scss
@@ -1,4 +1,6 @@
 .button {
+    display: flex;
+    align-items: center;
     width: fit-content;
     padding: 1.2rem 1.6rem;
     font-size: 1.6rem;
