--- a/frontend/src/assets/sass/app.scss
+++ b/frontend/src/assets/sass/app.scss
@@ -10,6 +10,7 @@
 @import 'components/transaction-item';
 
 @import 'layouts/footer';
+@import 'layouts/header';
 @import 'layouts/layout';
 @import 'layouts/navigation';
 
