--- a/frontend/src/assets/sass/app.scss
+++ b/frontend/src/assets/sass/app.scss
@@ -7,10 +7,10 @@
 @import 'components/button';
 @import 'components/create-transaction';
 @import 'components/details';
+@import 'components/spinner';
 @import 'components/transaction-item';
 
 @import 'layouts/footer';
-@import 'layouts/header';
 @import 'layouts/layout';
 @import 'layouts/navigation';
 
